2010-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (preset): Fix compilation error if XAPPLRESDIR is not
	externally defined.

2010-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/README docs/Makefile.in docs/pdffigures.tex docs/titlepag.tex:
	Split out dependence on the packages graphicx and picins into a separate
	file (pdffigures.tex) that is only needed by target "make pdffigures".

2010-03-07  Ethan A Merritt  <merritt@u.washington.edu>

	* share/Makefile.am: Give up on figuring out a universally agreed on
	place where x11 app-defaults files should be installed.  Place ours in
	${PREFIX}/share/gnuplot/4.5/app-defaults

2010-03-06  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* INSTALL config/makefile.mgw config/makefile.cyg:
	Consolidate the instructions for building using mgw and cygwin into
	their respective makefiles.

2010-03-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Both curves in 'with filledcurves' must
	use the same y axis properties.
	Bug #2941257

	* src/util.c configure.in config/config.cyg config/config.dj2
	config/config.mgw config/config.ntconfig/config.os2 config/config.oww:
	Remove the test for pwd.h, the configuration flag HAVE_PWD_H, and the
	conditional code that copies GECOS information from the password file
	into the header of PostScript and PDF output files.  This addresses
	reported issues of privacy and reported problems with building a static
	executable.

2010-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/internal.c (eval_reset_after_error f_call) src/internal.h
	src/util.c (int_error) eval.h (STACK_DEPTH):
	Add a recursion depth limit for calls to a user-defined function.
	Bump the maximum depth from 100 to 250.
	Bug #2954383

2010-03-05  Christoph Junghans (ottxor)

	* src/Makefile.am:  Fix broken target "make clean"

2010-03-04  Thomas Sefzick <thse@users.sourceforge.net>

	* src/svg.trm:  Make sure to reset ENHsvg_string_state after each use.
